@startuml

class Cliente {
  -RG: String
  -CPF: String
  -nome: String
  -endereco: String
  -profissao: String
  -empregadores: List<Empregador>
  -pedidos: List<Pedido>
}

class Agente {
  -nome: String
  -empresa: String
  -tipoAgente: String
  +avaliarPedido(pedido: Pedido): void
}

class Empregador {
  -nome: String
  -rendimento: Double
}

class Pedido {
  -status: String
  -dataPedido: Date
  -contrato: Contrato
  -veiculo: Veiculo
  +modificarPedido(): void
  +cancelarPedido(): void
  +consultarPedido(pedido: Pedido): Pedido
}

class Veiculo {
  -matricula: String
  -ano: Integer
  -marca: String
  -modelo: String
  -placa: String
  -proprietario: String
}

class ContratoAluguel {
  -tipo: String
  -duracao: Integer
  -opcaoCompra: Boolean
  -contratoCredito: ContratoCredito
  - pedido: Pedido
  - duracao: DuracaoContrato
  +comprarVeiculo(veiculo: Veiculo): void
  +emitirDocumento(): String
}

class ContratoCredito {
  -banco: String
  -valorFinanciado: Double
}

enum DuracaoContrato {
    - 12
    - 24
    - 36
    - 48
}

ContratoAluguel -- DuracaoContrato
Cliente --  Pedido
Agente  -- Pedido
Pedido -- Veiculo
Pedido -- ContratoAluguel
ContratoAluguel -- ContratoCredito
Cliente -- Empregador
@enduml
